Add document upload for engagement context extraction (Issue #1)
Engagement context often already exists in document form (SOWs, project briefs,
prior assessments) and shouldn't need to be re-entered by hand. This adds a
"Document Upload" tab to the engagement creation flow that lets admins upload
PDFs and text files, stores them in Cloudflare R2, and sends them to Claude
for automatic Description and Context extraction.

Infrastructure: R2 bucket binding (DOCUMENTS_R2), engagement_documents table
with processing status tracking, 4 new DB functions for document CRUD.

AI integration: New extract_engagement_context tool schema. Claude receives
PDFs natively as base64 document blocks and text files as text blocks, returning
structured description, context, and per-document summaries.

Backend: 3 new admin API endpoints — multipart upload with 10MB/PDF+TXT
validation, fire-and-forget extraction via waitUntil (matching existing pattern),
and document listing for status polling. Concurrent extraction guard prevents
duplicate processing.

Frontend: Third creation tab with drag-and-drop dropzone, file list management,
4-step async flow (create engagement → upload → extract → poll), and status
spinner during extraction.

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,3 +13,7 @@ id = "d7bfb3829df04578aa77a967e984f590"
 [[hyperdrive]]
 binding = "HYPERDRIVE"
 id = "a871481c4d5a4c789d2a48879cf3ca9c"
+
+[[r2_buckets]]
+binding = "DOCUMENTS_R2"
+bucket_name = "discovery-documents"
